--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ ul {
 
 .container {
   padding: 0 16px;
+  margin: 0 auto;
 }
 
 
@@ -49,8 +50,11 @@ ul {
 
 .header__logo {
   position: relative;
-  justify-self: left;
   margin-left: 16px;
+}
+
+.logo__link {
+  display: flex;
 }
 
 .header__logo::after {
@@ -74,12 +78,12 @@ ul {
   justify-content: right;
 }
 
-.info__list > .info__item:not(:last-child) {
-  margin-right: 16px;;
+.info__list {
+  gap: 16px;
 }
 
-.logo, .button-info, .info__item, .burger {
-  line-height: 0;
+.button-info, .burger, .logo, .info__item {
+  display: flex;
 }
 
 .header__h1 {
@@ -116,18 +120,36 @@ ul {
 
 .main {
   margin-bottom: 30px;
+  overflow-x: hidden;
 }
 
-.main__nav {
+.hero__nav {
   margin-bottom: 18px;
 }
 
+
 .services__list {
+  position: relative;
   display: flex;
   overflow-x: scroll;
   margin-right: -16px;
   min-width: 100%;
   align-items: center;
+}
+
+.hero__nav {
+  position: relative;
+  margin-right: -16px;
+}
+
+.hero__nav::after {
+  position: absolute;
+  content: '';
+  height: 100%;
+  width: 100px;
+  background-image: linear-gradient(to right, transparent 50%, white);
+  right: 0;
+  top: 0;
 }
 
 .services__list::-webkit-scrollbar {
@@ -138,42 +160,59 @@ ul {
   margin: 5px;
 }
 
-.service__button {
+.service__link {
+  display: block;
+  color: black;
+  text-decoration: none;
   padding: 9px 15px;
   font-size: 16px;
   white-space: nowrap;
   border-radius: 4px;
+  transition: border .1s ease-in-out;
 }
 
-.service__button--active {
+.service__link--active, .service__link:hover {
   border: 2px solid #B8FFEC;
 }
 
 .information__description {
+  display: flex;
+  flex-direction: column;
   overflow: hidden;
   max-height: 106px;
   font-size: 15px;
   line-height: 1.2em;
   letter-spacing: 0px;
+  gap: 20px;
 }
 
-.information__p:not(:last-child) {
-  margin-bottom: 20px;
-}
 
 .button-read-more {
   display: flex;
-  flex-direction: row-reverse;
   align-items: center;
+  gap: 8px;
+}
+
+.button-read-more::before {
+  content: '';
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("../images/svgs/expand.svg");
+  height: 40px;
+  width: 40px;
 }
 
 .button-read-more__label {
   margin-left: 8px;
 }
 
+.image-info {
+  display: flex;
+}
+
 .image-info__img {
-  width: 100%;
-  height: 100%;
+  border-radius: 10px;
+  flex-grow: 1;
 }
 
 .information__image {
@@ -181,14 +220,14 @@ ul {
 }
 
 .image-info__picture {
-  display: block;
-  width: 100%;
+  display: flex;
+  flex-grow: 1;
 }
 
 
 .information__content {
   margin-bottom: 16px;
-  width: 100%;
+  flex-grow: 1;
 }
 
 @media screen and (min-width: 600px) {
@@ -230,10 +269,6 @@ ul {
     position: relative;
   }
 
-  .image-info__img {
-    height: 100%;
-  }
-
   .header__info::after {
     position: absolute;
     left: -22px;
@@ -254,28 +289,23 @@ ul {
     display: flex;
   }
 
-  .menu__item:not(:last-child) {
-    margin-right: 16px;
+  .menu__list {
+    gap: 16px;
   }
 
-  .nav-button {
-    line-height: 0;
-    font-size: 0;
+  .menu-button {
+    display: flex;
   }
 
   /* MAIN */
-
-  
-.image-info__picture {
-  height: 100%;
-}
 
   .main {
     margin-bottom: 35px;
   }
 
-  .main__nav {
+  .hero__nav {
     margin-bottom: 27px;
+    margin-right: -32px;
   }
 
   .button-read-more {
@@ -288,8 +318,11 @@ ul {
 
   .information__image {
     margin: 0;
-    margin-left: 48px;
     flex-grow: 1;
+  }
+
+  .information {
+    gap: 48px;
   }
 
   .information__p {
@@ -298,22 +331,25 @@ ul {
     font-size: 14px;
   }
 
-  .information__p:not(:last-child) {
-    margin-bottom: 39px;
-  }
-
   .information__content {
-    width: 312px;
+    flex-basis: 312px;
   }
-
+  
   .information__description {
+    gap: 39px;
     max-height: 168px;
   }
 }
 
 @media screen and (min-width: 1000px) {
 
+  .big-container {
+    max-width: 1120px;
+    margin: 0 auto;
+  }
+  
   .container {
+    max-width: 1120px;
     padding: 0 32px;
   }
 
@@ -354,8 +390,8 @@ ul {
     align-items: center;
   }
 
-  .info__list > .info__item:not(:last-child) {
-    margin-right: 32px;
+  .info__list {
+    gap: 32px;
   }
 
   /* MAIN */
@@ -365,12 +401,17 @@ ul {
     overflow-x: unset;
   }
 
-  .main__nav {
+  .hero__nav {
     margin-bottom: 4px;
   }
 
+  .hero__nav::after {
+    content: unset;
+  }
+
   .information__content {
-    width: 490px;
+    flex-grow: unset;
+    flex-basis: 490px;
   }
 
   .information__description {
@@ -378,9 +419,12 @@ ul {
     margin-bottom: 12px;
   }
 
+  .information {
+    gap: 41px;
+  }
+
   .information__image {
     margin-top: -8px;
-    margin-left: 41px;
   }
   
   
