--- a/styles/style.css
+++ b/styles/style.css
@@ -168,11 +168,12 @@ ul {
   font-size: 16px;
   white-space: nowrap;
   border-radius: 4px;
-  transition: border .1s ease-in-out;
+  transition: border-color .1s ease-in-out;
+  border: 2px solid transparent;
 }
 
 .service__link--active, .service__link:hover {
-  border: 2px solid #B8FFEC;
+  border-color: #B8FFEC;
 }
 
 .information__description {
