--- a/styles/style.css
+++ b/styles/style.css
@@ -39,9 +39,16 @@ ul {
   margin-bottom: 25px;
 }
 
+.header__bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center
+}
+
 .header__content {
   display: flex;
   align-items: center;
+  flex-grow: 1;
 }
 
 .header__info {
